[project]
name = "sus-oxipy"
version = "0.1.0"
description = "Blazing fast library for processing files and wrangling data from the Brazilian Unified Health System (SUS)"
authors = [{ name = "Raphael Vaz", email = "raphael@wrath.codes" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings-python",
]

# Hatch Configuration for Polylith
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.uv.sources]
mkdocstrings-python = { git = "https://github.com/pawamoy-insiders/mkdocstrings-python.git" }
